# shannon

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEMO.md  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  _tmp_commit.py
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  container.yml  fuzz.yml  kernel-matrix.yml  release.yml
deploy/k8s/: README.md  daemonset.yaml
docs/: architecture.md  claude-code.md  roadmap.md
docs/demo-output/: 01-doctor.txt  05-analyze.txt  06-coap.txt  06-conn.txt  06-dns.txt  06-full.txt  06-http.txt  06-mqtt.txt  06-redis.txt  06-sqlite.txt  06-tls.txt  capture.jsonl.zst
fuzz/: Cargo.toml
fuzz/fuzz_targets/: coap.rs  dns.rs  http2.rs  kerberos.rs  ldap.rs  quic.rs  snmp.rs  tls.rs
packaging/: shannon.default  shannon.service  shannon.toml
packaging/debian/: postinst  prerm
scripts/: cert-pin-smoke.sh  claude-smoke.sh  demo.sh  push-build.sh  quic-smoke.sh  replay-smoke.sh  sqlite-cli-smoke.sh  sqlite-smoke.sh  udp-smoke.sh
shannon/: Cargo.toml  build.rs
shannon-common/: Cargo.toml
shannon-common/src/: lib.rs
shannon-ebpf/: Cargo.toml  rust-toolchain.toml
shannon-ebpf/.cargo/: config.toml
shannon-ebpf/src/: conn.rs  main.rs  maps.rs  process.rs  sqlite.rs  tcp.rs  tls.rs  udp.rs  util.rs
shannon/src/: api_catalog.rs  ask_tools.rs  aws.rs  cert_dump.rs  cli.rs  config.rs  containers.rs  dns_cache.rs  doctor.rs  events.rs  file_dump.rs  flow.rs  graphql.rs  lib.rs  llm.rs  llm_client.rs  logging.rs  main.rs  metrics.rs  ntlm.rs  pcap.rs  proto.rs  proto_infer.rs  replay.rs  runtime.rs  secrets.rs  warnings.rs
shannon/src/commands/: analyze.rs  ask.rs  map.rs  mod.rs  proto_infer.rs  record.rs  top.rs  trace.rs  watch.rs
shannon/src/parsers/: amqp.rs  bacnet.rs  cassandra.rs  coap.rs  dhcp.rs  dnp3.rs  dns.rs  enip.rs  ftp.rs  http1.rs  http2.rs  iec104.rs  imap.rs  irc.rs  kafka.rs  kerberos.rs  ldap.rs  memcached.rs  mod.rs  modbus.rs  mongodb.rs  mqtt.rs  mssql.rs  mysql.rs  nats.rs  nfs.rs  ntp.rs  opcua.rs  oracle.rs  pop3.rs  postgres.rs  quic.rs  radius.rs  rdp.rs  redis.rs  rtsp.rs  s7comm.rs  sip.rs  smb.rs  smpp.rs  (+13 more)
xtask/: Cargo.toml
xtask/src/: main.rs
