[workspace]
resolver = "2"
members  = ["shannon", "shannon-common", "xtask"]
exclude  = ["shannon-ebpf"]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.83"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/syso/shannon"
homepage     = "https://github.com/syso/shannon"
authors      = ["shannon contributors"]
description  = "Zero-instrumentation L7 observability via eBPF"
keywords     = ["ebpf", "observability", "networking", "tracing"]
categories   = ["command-line-utilities", "network-programming"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn        = "deny"
rust_2018_idioms              = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
unused_lifetimes              = "warn"
unused_qualifications         = "warn"
# `unreachable_pub` is noisy in binary crates; enable only in library crates
# via their own `#![warn(unreachable_pub)]` if desired.

[workspace.lints.clippy]
pedantic                 = { level = "warn", priority = -1 }
nursery                  = { level = "warn", priority = -1 }
# opt-outs that are noise in an application codebase
module_name_repetitions  = "allow"
missing_errors_doc       = "allow"
missing_panics_doc       = "allow"
must_use_candidate       = "allow"
cast_possible_truncation = "allow"
cast_sign_loss           = "allow"
cast_lossless            = "allow"
cast_precision_loss      = "allow"
cast_possible_wrap       = "allow"
cast_ptr_alignment       = "allow"
too_many_lines           = "allow"
multiple_crate_versions  = "allow"
# Stylistic / pedantic lints that fire densely on protocol-parsing code
# and would require mass churn for negligible benefit. Re-enable
# selectively when a specific cleanup pass is warranted.
doc_markdown                       = "allow"
unreadable_literal                 = "allow"
manual_let_else                    = "allow"
derivable_impls                    = "allow"
single_match_else                  = "allow"
missing_const_for_fn               = "allow"
match_same_arms                    = "allow"
option_if_let_else                 = "allow"
redundant_closure_for_method_calls = "allow"
map_unwrap_or                      = "allow"
use_self                           = "allow"
unnecessary_sort_by                = "allow"
items_after_statements             = "allow"
needless_pass_by_value             = "allow"
manual_range_contains              = "allow"
format_push_string                 = "allow"
enum_glob_use                      = "allow"
type_complexity                    = "allow"
or_fun_call                        = "allow"
format_collect                     = "allow"
uninlined_format_args              = "allow"
similar_names                      = "allow"
ignored_unit_patterns              = "allow"
future_not_send                    = "allow"
unnecessary_wraps                  = "allow"
needless_borrow                    = "allow"
collapsible_match                  = "allow"
collapsible_if                     = "allow"
unnested_or_patterns               = "allow"
struct_excessive_bools             = "allow"
range_plus_one                     = "allow"
needless_pass_by_ref_mut           = "allow"
match_wildcard_for_single_variants = "allow"
manual_range_patterns              = "allow"
manual_pattern_char_comparison     = "allow"
manual_contains                    = "allow"
manual_checked_ops                 = "allow"
large_enum_variant                 = "allow"
borrow_as_ptr                      = "allow"
unused_self                        = "allow"
trivially_copy_pass_by_ref         = "allow"
semicolon_if_nothing_returned      = "allow"
ref_option                         = "allow"
unnecessary_map_or                 = "allow"
unnecessary_cast                   = "allow"
unnecessary_trailing_comma         = "allow"
incompatible_msrv                  = "allow"
unused_peekable                    = "allow"
redundant_clone                    = "allow"
question_mark                      = "allow"
ptr_arg                            = "allow"
no_effect_underscore_binding       = "allow"
needless_lifetimes                 = "allow"
needless_late_init                 = "allow"
needless_collect                   = "allow"
many_single_char_names             = "allow"
manual_clamp                       = "allow"
if_not_else                        = "allow"
for_kv_map                         = "allow"
checked_conversions                = "allow"
branches_sharing_code              = "allow"
vec_init_then_push                 = "allow"
single_char_pattern                = "allow"
decimal_bitwise_operands           = "allow"
collection_is_never_read           = "allow"
case_sensitive_file_extension_comparisons = "allow"
# opt-ins — hard fail on these
dbg_macro                = "deny"
todo                     = "deny"
unimplemented            = "deny"
print_stdout             = "allow"   # CLI tool — println! is the natural output path
mem_forget               = "deny"
rc_mutex                 = "deny"
undocumented_unsafe_blocks = "allow"

[workspace.dependencies]
shannon-common = { path = "shannon-common" }

# ---- userspace ----------------------------------------------------------
aya                    = { version = "0.13", features = ["async_tokio"] }
aya-log                = "0.2"
aya-obj                = "0.2"
tokio                  = { version = "1.41", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "io-util", "io-std", "fs", "net"] }
tracing                = "0.1"
tracing-subscriber     = { version = "0.3", features = ["env-filter", "fmt", "json"] }
anyhow                 = "1"
thiserror              = "2"
clap                   = { version = "4.5", features = ["derive", "wrap_help", "env", "string"] }
clap_complete          = "4.5"
serde                  = { version = "1", features = ["derive"] }
serde_json             = "1"
serde_bytes            = "0.11"
bytes                  = "1"
bytemuck               = { version = "1.16", features = ["derive"] }
libc                   = "0.2"
ahash                  = "0.8"
arc-swap               = "1"
parking_lot            = "0.12"
regex                  = "1"
globset                = "0.4"
time                   = { version = "0.3", features = ["formatting", "macros"] }
humantime              = "2.1"
caps                   = "0.5"

# ---- parsing ------------------------------------------------------------
httparse               = "1.9"
hpack-patched          = { package = "hpack", version = "0.3" }
twoway                 = "0.2"
memchr                 = "2"

# ---- TUI ----------------------------------------------------------------
ratatui                = "0.29"
crossterm              = "0.28"

# ---- stats --------------------------------------------------------------
hdrhistogram           = "7"

# ---- testing ------------------------------------------------------------
proptest               = "1"
insta                  = { version = "1", features = ["yaml"] }
tempfile               = "3"
rstest                 = "0.23"

[profile.release]
lto              = "thin"
codegen-units    = 1
strip            = "symbols"
panic            = "abort"
opt-level        = 3

[profile.release-debug]
inherits = "release"
strip    = "none"
debug    = "full"
split-debuginfo = "packed"

[profile.dev]
# make debug builds quick-ish on a 40-core box
opt-level = 0
debug     = "limited"
