[package]
name        = "shannon-ebpf"
version     = "0.1.0"
edition     = "2021"
license     = "MIT OR Apache-2.0"
description = "Kernel-side eBPF programs for shannon (no_std, bpfel target)"
publish     = false

[[bin]]
name = "shannon-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf        = "0.1.1"
aya-log-ebpf    = "0.1.0"
shannon-common  = { path = "../shannon-common", default-features = false }
network-types   = "0.0.7"

[profile.dev]
opt-level         = 3
debug             = false
debug-assertions  = false
overflow-checks   = false
lto               = false
panic             = "abort"
incremental       = false
codegen-units     = 1
rpath             = false

[profile.release]
opt-level         = 3
debug             = false
debug-assertions  = false
overflow-checks   = false
lto               = true
panic             = "abort"
codegen-units     = 1
rpath             = false

[workspace]
# Standalone workspace: different target (bpfel-unknown-none) and toolchain
# (nightly) than the rest of the project.
