[package]
name         = "shannon"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description.workspace  = true
keywords.workspace     = true
categories.workspace   = true
default-run  = "shannon"

[[bin]]
name = "shannon"
path = "src/main.rs"

[dependencies]
shannon-common      = { workspace = true }
aya                 = { workspace = true }
aya-log             = { workspace = true }
tokio               = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
anyhow              = { workspace = true }
thiserror           = { workspace = true }
clap                = { workspace = true }
clap_complete       = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
bytes               = { workspace = true }
bytemuck            = { workspace = true }
libc                = { workspace = true }
ahash               = { workspace = true }
arc-swap            = { workspace = true }
parking_lot         = { workspace = true }
regex               = { workspace = true }
globset             = { workspace = true }
time                = { workspace = true }
humantime           = { workspace = true }
caps                = { workspace = true }
httparse            = { workspace = true }
hpack-patched       = { workspace = true }
twoway              = { workspace = true }
memchr              = { workspace = true }
ratatui             = { workspace = true }
crossterm           = { workspace = true }
hdrhistogram        = { workspace = true }
prost-reflect       = { version = "0.14", features = ["serde"] }
protox              = "0.7"
zstd                = "0.13"
flate2              = "1"
x509-parser         = "0.17"
sha2                = "0.10"

[dev-dependencies]
proptest   = { workspace = true }
insta      = { workspace = true }
tempfile   = { workspace = true }
rstest     = { workspace = true }

[lints]
workspace = true
