[package]
name         = "shannon"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
description.workspace  = true
keywords.workspace     = true
categories.workspace   = true
default-run  = "shannon"

[[bin]]
name = "shannon"
path = "src/main.rs"

[dependencies]
shannon-common      = { workspace = true }
aya                 = { workspace = true }
aya-log             = { workspace = true }
tokio               = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
anyhow              = { workspace = true }
thiserror           = { workspace = true }
clap                = { workspace = true }
clap_complete       = { workspace = true }
serde               = { workspace = true }
serde_json          = { workspace = true }
bytes               = { workspace = true }
bytemuck            = { workspace = true }
libc                = { workspace = true }
ahash               = { workspace = true }
arc-swap            = { workspace = true }
parking_lot         = { workspace = true }
regex               = { workspace = true }
globset             = { workspace = true }
time                = { workspace = true }
humantime           = { workspace = true }
caps                = { workspace = true }
httparse            = { workspace = true }
hpack-patched       = { workspace = true }
twoway              = { workspace = true }
memchr              = { workspace = true }
ratatui             = { workspace = true }
crossterm           = { workspace = true }
hdrhistogram        = { workspace = true }
prost-reflect       = { version = "0.14", features = ["serde"] }
protox              = "0.7"
zstd                = "0.13"
flate2              = "1"
brotli              = "7"
x509-parser         = "0.17"
sha2                = "0.10"
hkdf                = "0.12"
aes                 = "0.8"
aes-gcm             = "0.10"
ureq                = { version = "2", features = ["json"] }

[dev-dependencies]
proptest   = { workspace = true }
insta      = { workspace = true }
tempfile   = { workspace = true }
rstest     = { workspace = true }

[lints]
workspace = true

# ---------------------------------------------------------------------------
# Debian packaging — produced by `cargo deb`.
# ---------------------------------------------------------------------------
[package.metadata.deb]
maintainer        = "shannon contributors"
copyright         = "2026, shannon contributors <https://github.com/DatanoiseTV/shannon>"
license-file      = ["../LICENSE-APACHE", "0"]
extended-description = """\
shannon is a zero-instrumentation L7 observability tool. It loads
eBPF programs into the kernel (kprobes on TCP/UDP, uprobes on libssl
and other TLS runtimes) and decodes 50+ application protocols in
userspace — HTTP, gRPC, Postgres, MySQL, Redis, MongoDB, Kafka,
DNS, TLS, QUIC, SMB, NFS, Modbus, S7comm, and many more.

It runs as a single static binary on a host or Kubernetes node;
no sidecars, no application changes, no private keys, no kernel
modules. Requires Linux ≥ 5.8 with BTF.
"""
section           = "admin"
priority          = "optional"
depends           = "$auto, libelf1t64 | libelf1, libssl3 | libssl1.1"
recommends        = "libsqlite3-0"
assets = [
    ["target/release/shannon",       "usr/bin/",                              "755"],
    ["../README.md",                 "usr/share/doc/shannon/README.md",       "644"],
    ["../DEMO.md",                   "usr/share/doc/shannon/DEMO.md",         "644"],
    ["../SECURITY.md",               "usr/share/doc/shannon/SECURITY.md",     "644"],
    ["../packaging/shannon.default", "etc/default/shannon",                   "644"],
    ["../packaging/shannon.toml",    "etc/shannon/shannon.toml",              "644"],
]
maintainer-scripts = "../packaging/debian"
systemd-units = { unit-name = "shannon", enable = false, start = false, unit-scripts = "../packaging" }
